// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Default 1`] = `
.c0 {
  border: 0;
  min-width: 18.125rem;
  font-size: 1.125rem;
  font-weight: 500;
  color: #fff;
  background: linear-gradient(90deg,rgba(150,219,199,0.5) 0%,#547c71 100%),#77b1a0;
  -webkit-letter-spacing: 0.04em;
  -moz-letter-spacing: 0.04em;
  -ms-letter-spacing: 0.04em;
  letter-spacing: 0.04em;
  padding: 1rem 0;
  border-radius: 12px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.25);
  cursor: pointer;
  z-index: 1;
  position: relative;
  -webkit-transition: all 0.25s ease;
  transition: all 0.25s ease;
}

.c0:disabled {
  cursor: not-allowed;
  border: none;
  color: #fff;
}

.c0:disabled::before {
  position: absolute;
  content: '';
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: lightgray;
  border-radius: inherit;
  z-index: -1;
  -webkit-transition: opacity 0.5s ease;
  transition: opacity 0.5s ease;
  opacity: 0.75;
}

.c0:enabled:hover {
  box-shadow: 0px 4px 4px rgba(0,0,0,0.25);
}

.c0:enabled::before {
  position: absolute;
  content: '';
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: linear-gradient(270deg,#6a978a -10%,rgba(126,183,166,0.5) 155%),#77b1a0;
  border-radius: inherit;
  z-index: -1;
  -webkit-transition: opacity 0.5s ease;
  transition: opacity 0.5s ease;
  opacity: 0;
}

.c0:enabled:hover::before {
  opacity: 1;
}

@media (max-width:1020px) {

}

@media (max-width:510px) {

}

<button
  aria-disabled={false}
  className="c0"
  disabled={false}
  onClick={[Function]}
  size="normal"
  type="button"
>
  Primary
</button>
`;

exports[`Storyshots Button Primary 1`] = `
.c0 {
  border: 0;
  min-width: 18.125rem;
  font-size: 1.125rem;
  font-weight: 500;
  color: #fff;
  background: linear-gradient(90deg,rgba(150,219,199,0.5) 0%,#547c71 100%),#77b1a0;
  -webkit-letter-spacing: 0.04em;
  -moz-letter-spacing: 0.04em;
  -ms-letter-spacing: 0.04em;
  letter-spacing: 0.04em;
  padding: 1rem 0;
  border-radius: 12px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.25);
  cursor: pointer;
  z-index: 1;
  position: relative;
  -webkit-transition: all 0.25s ease;
  transition: all 0.25s ease;
}

.c0:disabled {
  cursor: not-allowed;
  border: none;
  color: #fff;
}

.c0:disabled::before {
  position: absolute;
  content: '';
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: lightgray;
  border-radius: inherit;
  z-index: -1;
  -webkit-transition: opacity 0.5s ease;
  transition: opacity 0.5s ease;
  opacity: 0.75;
}

.c0:enabled:hover {
  box-shadow: 0px 4px 4px rgba(0,0,0,0.25);
}

.c0:enabled::before {
  position: absolute;
  content: '';
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: linear-gradient(270deg,#6a978a -10%,rgba(126,183,166,0.5) 155%),#77b1a0;
  border-radius: inherit;
  z-index: -1;
  -webkit-transition: opacity 0.5s ease;
  transition: opacity 0.5s ease;
  opacity: 0;
}

.c0:enabled:hover::before {
  opacity: 1;
}

@media (max-width:1020px) {

}

@media (max-width:510px) {

}

<button
  aria-disabled={false}
  className="c0"
  disabled={false}
  onClick={[Function]}
  size="normal"
  type="button"
>
  Primary
</button>
`;

exports[`Storyshots Button Primary Disabled 1`] = `
.c0 {
  border: 0;
  min-width: 18.125rem;
  font-size: 1.125rem;
  font-weight: 500;
  color: #fff;
  background: linear-gradient(90deg,rgba(150,219,199,0.5) 0%,#547c71 100%),#77b1a0;
  -webkit-letter-spacing: 0.04em;
  -moz-letter-spacing: 0.04em;
  -ms-letter-spacing: 0.04em;
  letter-spacing: 0.04em;
  padding: 1rem 0;
  border-radius: 12px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.25);
  cursor: pointer;
  z-index: 1;
  position: relative;
  -webkit-transition: all 0.25s ease;
  transition: all 0.25s ease;
}

.c0:disabled {
  cursor: not-allowed;
  border: none;
  color: #fff;
}

.c0:disabled::before {
  position: absolute;
  content: '';
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: lightgray;
  border-radius: inherit;
  z-index: -1;
  -webkit-transition: opacity 0.5s ease;
  transition: opacity 0.5s ease;
  opacity: 0.75;
}

.c0:enabled:hover {
  box-shadow: 0px 4px 4px rgba(0,0,0,0.25);
}

.c0:enabled::before {
  position: absolute;
  content: '';
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: linear-gradient(270deg,#6a978a -10%,rgba(126,183,166,0.5) 155%),#77b1a0;
  border-radius: inherit;
  z-index: -1;
  -webkit-transition: opacity 0.5s ease;
  transition: opacity 0.5s ease;
  opacity: 0;
}

.c0:enabled:hover::before {
  opacity: 1;
}

@media (max-width:1020px) {

}

@media (max-width:510px) {

}

<button
  aria-disabled={true}
  className="c0"
  disabled={true}
  onClick={[Function]}
  size="normal"
  type="button"
>
  Primary
</button>
`;

exports[`Storyshots Button Primary Large 1`] = `
.c0 {
  border: 0;
  min-width: 20.375rem;
  font-size: 1.25rem;
  font-weight: 600;
  color: #fff;
  background: linear-gradient(90deg,rgba(150,219,199,0.5) 0%,#547c71 100%),#77b1a0;
  -webkit-letter-spacing: 0.04em;
  -moz-letter-spacing: 0.04em;
  -ms-letter-spacing: 0.04em;
  letter-spacing: 0.04em;
  padding: 1rem 0;
  border-radius: 12px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.25);
  cursor: pointer;
  z-index: 1;
  position: relative;
  -webkit-transition: all 0.25s ease;
  transition: all 0.25s ease;
}

.c0:disabled {
  cursor: not-allowed;
  border: none;
  color: #fff;
}

.c0:disabled::before {
  position: absolute;
  content: '';
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: lightgray;
  border-radius: inherit;
  z-index: -1;
  -webkit-transition: opacity 0.5s ease;
  transition: opacity 0.5s ease;
  opacity: 0.75;
}

.c0:enabled:hover {
  box-shadow: 0px 4px 4px rgba(0,0,0,0.25);
}

.c0:enabled::before {
  position: absolute;
  content: '';
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: linear-gradient(270deg,#6a978a -10%,rgba(126,183,166,0.5) 155%),#77b1a0;
  border-radius: inherit;
  z-index: -1;
  -webkit-transition: opacity 0.5s ease;
  transition: opacity 0.5s ease;
  opacity: 0;
}

.c0:enabled:hover::before {
  opacity: 1;
}

@media (max-width:1020px) {

}

@media (max-width:510px) {

}

<button
  aria-disabled={false}
  className="c0"
  disabled={false}
  onClick={[Function]}
  size="large"
  type="button"
>
  Primary
</button>
`;

exports[`Storyshots Button Primary Small 1`] = `
.c0 {
  border: 0;
  min-width: 16rem;
  font-size: 1.125rem;
  font-weight: 500;
  color: #fff;
  background: linear-gradient(90deg,rgba(150,219,199,0.5) 0%,#547c71 100%),#77b1a0;
  -webkit-letter-spacing: 0.04em;
  -moz-letter-spacing: 0.04em;
  -ms-letter-spacing: 0.04em;
  letter-spacing: 0.04em;
  padding: 1rem 0;
  border-radius: 12px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.25);
  cursor: pointer;
  z-index: 1;
  position: relative;
  -webkit-transition: all 0.25s ease;
  transition: all 0.25s ease;
}

.c0:disabled {
  cursor: not-allowed;
  border: none;
  color: #fff;
}

.c0:disabled::before {
  position: absolute;
  content: '';
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: lightgray;
  border-radius: inherit;
  z-index: -1;
  -webkit-transition: opacity 0.5s ease;
  transition: opacity 0.5s ease;
  opacity: 0.75;
}

.c0:enabled:hover {
  box-shadow: 0px 4px 4px rgba(0,0,0,0.25);
}

.c0:enabled::before {
  position: absolute;
  content: '';
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: linear-gradient(270deg,#6a978a -10%,rgba(126,183,166,0.5) 155%),#77b1a0;
  border-radius: inherit;
  z-index: -1;
  -webkit-transition: opacity 0.5s ease;
  transition: opacity 0.5s ease;
  opacity: 0;
}

.c0:enabled:hover::before {
  opacity: 1;
}

@media (max-width:1020px) {

}

@media (max-width:510px) {

}

<button
  aria-disabled={false}
  className="c0"
  disabled={false}
  onClick={[Function]}
  size="small"
  type="button"
>
  Primary
</button>
`;

exports[`Storyshots Button Secondary 1`] = `
.c0 {
  border: 1px solid #fff;
  min-width: 18.125rem;
  font-size: 1.125rem;
  font-weight: 500;
  color: rgba(64,60,52,0.75);
  background: #fff;
  -webkit-letter-spacing: 0.04em;
  -moz-letter-spacing: 0.04em;
  -ms-letter-spacing: 0.04em;
  letter-spacing: 0.04em;
  padding: 1rem 0;
  border-radius: 36px;
  box-shadow: 0px 2px 8px rgba(129,129,129,0.25),inset 0px 2px 2px rgba(0,0,0,0.1);
  cursor: pointer;
  z-index: 1;
  position: relative;
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:disabled {
  cursor: not-allowed;
  border: none;
  color: #fff;
}

.c0:disabled::before {
  position: absolute;
  content: '';
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: gray;
  border-radius: inherit;
  z-index: -1;
  -webkit-transition: opacity 0.5s ease;
  transition: opacity 0.5s ease;
  opacity: 0.25;
}

.c0:enabled:active {
  background: #fcfcfc;
  padding-top: 1.0625rem;
  box-shadow: 0px 0px 8px rgba(129,129,129,0.2), inset 0px 4px 4px rgba(0,0,0,0.1);
}

@media (max-width:1020px) {

}

@media (max-width:510px) {

}

<button
  aria-disabled={false}
  className="c0"
  disabled={false}
  onClick={[Function]}
  size="normal"
  type="button"
>
  Secondary
</button>
`;

exports[`Storyshots Button Secondary Disabled 1`] = `
.c0 {
  border: 1px solid #fff;
  min-width: 18.125rem;
  font-size: 1.125rem;
  font-weight: 500;
  color: rgba(64,60,52,0.75);
  background: #fff;
  -webkit-letter-spacing: 0.04em;
  -moz-letter-spacing: 0.04em;
  -ms-letter-spacing: 0.04em;
  letter-spacing: 0.04em;
  padding: 1rem 0;
  border-radius: 36px;
  box-shadow: 0px 2px 8px rgba(129,129,129,0.25),inset 0px 2px 2px rgba(0,0,0,0.1);
  cursor: pointer;
  z-index: 1;
  position: relative;
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:disabled {
  cursor: not-allowed;
  border: none;
  color: #fff;
}

.c0:disabled::before {
  position: absolute;
  content: '';
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: gray;
  border-radius: inherit;
  z-index: -1;
  -webkit-transition: opacity 0.5s ease;
  transition: opacity 0.5s ease;
  opacity: 0.25;
}

.c0:enabled:active {
  background: #fcfcfc;
  padding-top: 1.0625rem;
  box-shadow: 0px 0px 8px rgba(129,129,129,0.2), inset 0px 4px 4px rgba(0,0,0,0.1);
}

@media (max-width:1020px) {

}

@media (max-width:510px) {

}

<button
  aria-disabled={true}
  className="c0"
  disabled={true}
  onClick={[Function]}
  size="normal"
  type="button"
>
  Secondary
</button>
`;

exports[`Storyshots Button Secondary Large 1`] = `
.c0 {
  border: 1px solid #fff;
  min-width: 20.375rem;
  font-size: 1.25rem;
  font-weight: 600;
  color: rgba(64,60,52,0.75);
  background: #fff;
  -webkit-letter-spacing: 0.04em;
  -moz-letter-spacing: 0.04em;
  -ms-letter-spacing: 0.04em;
  letter-spacing: 0.04em;
  padding: 1rem 0;
  border-radius: 36px;
  box-shadow: 0px 2px 8px rgba(129,129,129,0.25),inset 0px 2px 2px rgba(0,0,0,0.1);
  cursor: pointer;
  z-index: 1;
  position: relative;
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:disabled {
  cursor: not-allowed;
  border: none;
  color: #fff;
}

.c0:disabled::before {
  position: absolute;
  content: '';
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: gray;
  border-radius: inherit;
  z-index: -1;
  -webkit-transition: opacity 0.5s ease;
  transition: opacity 0.5s ease;
  opacity: 0.25;
}

.c0:enabled:active {
  background: #fcfcfc;
  padding-top: 1.0625rem;
  box-shadow: 0px 0px 8px rgba(129,129,129,0.2), inset 0px 4px 4px rgba(0,0,0,0.1);
}

@media (max-width:1020px) {

}

@media (max-width:510px) {

}

<button
  aria-disabled={false}
  className="c0"
  disabled={false}
  onClick={[Function]}
  size="large"
  type="button"
>
  Secondary
</button>
`;

exports[`Storyshots Button Secondary Small 1`] = `
.c0 {
  border: 1px solid #fff;
  min-width: 16rem;
  font-size: 1.125rem;
  font-weight: 500;
  color: rgba(64,60,52,0.75);
  background: #fff;
  -webkit-letter-spacing: 0.04em;
  -moz-letter-spacing: 0.04em;
  -ms-letter-spacing: 0.04em;
  letter-spacing: 0.04em;
  padding: 1rem 0;
  border-radius: 36px;
  box-shadow: 0px 2px 8px rgba(129,129,129,0.25),inset 0px 2px 2px rgba(0,0,0,0.1);
  cursor: pointer;
  z-index: 1;
  position: relative;
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:disabled {
  cursor: not-allowed;
  border: none;
  color: #fff;
}

.c0:disabled::before {
  position: absolute;
  content: '';
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: gray;
  border-radius: inherit;
  z-index: -1;
  -webkit-transition: opacity 0.5s ease;
  transition: opacity 0.5s ease;
  opacity: 0.25;
}

.c0:enabled:active {
  background: #fcfcfc;
  padding-top: 1.0625rem;
  box-shadow: 0px 0px 8px rgba(129,129,129,0.2), inset 0px 4px 4px rgba(0,0,0,0.1);
}

@media (max-width:1020px) {

}

@media (max-width:510px) {

}

<button
  aria-disabled={false}
  className="c0"
  disabled={false}
  onClick={[Function]}
  size="small"
  type="button"
>
  Secondary
</button>
`;

exports[`Storyshots Footer Default 1`] = `
.c0 {
  background-color: #403c34;
  color: #fff;
  font-weight: 500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 2rem;
}

.c0 p {
  margin: 0;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #f2cb5e;
  -webkit-transition: color 0.25s ease;
  transition: color 0.25s ease;
}

.c0 a:hover {
  color: #ffeb7e;
}

@media (max-width:1020px) {

}

@media (max-width:510px) {

}

<footer
  className="c0"
>
  <p>
    made by 
    <a
      href="https://github.com/jmtes"
    >
      juno tesoro
    </a>
  </p>
</footer>
`;

exports[`Storyshots Forms/Input Checkin 1`] = `
.c0 {
  width: 50%;
  border-radius: 12px;
  margin: 0.75rem 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  padding: 1.25rem 1.75rem;
  border: 1.15px solid #fff;
  box-shadow: 0px 2px 8px 4px rgba(0,0,0,0.1);
  font-weight: 500;
  font-size: 1.125rem;
  -webkit-transition: box-shadow 0.25s ease;
  transition: box-shadow 0.25s ease;
  overflow: hidden;
}

.c0 .icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 1.75rem;
  width: 2rem;
}

.c0 .input {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c0:focus-within {
  box-shadow: 0px 2px 8px 4px rgba(0,0,0,0.2);
}

.c0 label,
.c0 input,
.c0 ::-webkit-input-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 ::-moz-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 :-ms-input-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 ::placeholder {
  margin: 0.15rem 0;
}

.c0 label {
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  color: #605c54;
}

.c0 label span {
  color: #df0000;
  margin-left: 1rem;
  font-size: 1rem;
}

.c0 input,
.c0 ::-webkit-input-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 ::-moz-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 :-ms-input-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 ::placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input {
  border: 0;
  padding: 0;
  -webkit-transition: all 0.075s linear;
  transition: all 0.075s linear;
  color: #403c34;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  max-width: 100%;
}

.c0 input[type='number'],
.c0 input[type='number']:focus {
  width: 15%;
}

.c0 input:focus {
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
  width: 90%;
}

.c0 ::-webkit-input-placeholder {
  color: #9d9480;
}

.c0 ::-moz-placeholder {
  color: #9d9480;
}

.c0 :-ms-input-placeholder {
  color: #9d9480;
}

.c0 ::placeholder {
  color: #9d9480;
}

.c0 .DayPickerInput-OverlayWrapper {
  z-index: 2;
  position: absolute;
  border-radius: 12px;
}

.c0 .DayPickerInput-Overlay {
  border-radius: 12px;
}

.c0 .DayPicker-Day--today {
  color: #478170;
}

.c0 .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside) {
  position: relative;
  background-color: #478170;
  color: #fff;
}

.c0 .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside):hover {
  background-color: #478170;
}

.c0 .DayPicker:not(.DayPicker--interactionDisabled) .DayPicker-Day:not(.DayPicker-Day--disabled):not(.DayPicker-Day--selected):not(.DayPicker-Day--outside):hover {
  background-color: rgba(119,177,160,0.25);
}

@media (max-width:1020px) {

}

@media (max-width:510px) {

}

<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="c0"
    width="50%"
  >
    <div
      aria-hidden="true"
      className="icon"
    >
      <img
        src="test-file-stub"
      />
    </div>
    <div
      className="input"
    >
      <label
        htmlFor="checkin"
      >
        Checkin
        <span
          aria-hidden="true"
          className="error-msg"
        />
        <span
          aria-live="assertive"
          className="visually-hidden"
        />
      </label>
      <div
        className="DayPickerInput"
      >
        <input
          autoComplete="off"
          data-isdate={true}
          id="checkin"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          placeholder="YYYY-M-D"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms/Input Checkout 1`] = `
.c0 {
  width: 50%;
  border-radius: 12px;
  margin: 0.75rem 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  padding: 1.25rem 1.75rem;
  border: 1.15px solid #fff;
  box-shadow: 0px 2px 8px 4px rgba(0,0,0,0.1);
  font-weight: 500;
  font-size: 1.125rem;
  -webkit-transition: box-shadow 0.25s ease;
  transition: box-shadow 0.25s ease;
  overflow: hidden;
}

.c0 .icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 1.75rem;
  width: 2rem;
}

.c0 .input {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c0:focus-within {
  box-shadow: 0px 2px 8px 4px rgba(0,0,0,0.2);
}

.c0 label,
.c0 input,
.c0 ::-webkit-input-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 ::-moz-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 :-ms-input-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 ::placeholder {
  margin: 0.15rem 0;
}

.c0 label {
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  color: #605c54;
}

.c0 label span {
  color: #df0000;
  margin-left: 1rem;
  font-size: 1rem;
}

.c0 input,
.c0 ::-webkit-input-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 ::-moz-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 :-ms-input-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 ::placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input {
  border: 0;
  padding: 0;
  -webkit-transition: all 0.075s linear;
  transition: all 0.075s linear;
  color: #403c34;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  max-width: 100%;
}

.c0 input[type='number'],
.c0 input[type='number']:focus {
  width: 15%;
}

.c0 input:focus {
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
  width: 90%;
}

.c0 ::-webkit-input-placeholder {
  color: #9d9480;
}

.c0 ::-moz-placeholder {
  color: #9d9480;
}

.c0 :-ms-input-placeholder {
  color: #9d9480;
}

.c0 ::placeholder {
  color: #9d9480;
}

.c0 .DayPickerInput-OverlayWrapper {
  z-index: 2;
  position: absolute;
  border-radius: 12px;
}

.c0 .DayPickerInput-Overlay {
  border-radius: 12px;
}

.c0 .DayPicker-Day--today {
  color: #478170;
}

.c0 .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside) {
  position: relative;
  background-color: #478170;
  color: #fff;
}

.c0 .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside):hover {
  background-color: #478170;
}

.c0 .DayPicker:not(.DayPicker--interactionDisabled) .DayPicker-Day:not(.DayPicker-Day--disabled):not(.DayPicker-Day--selected):not(.DayPicker-Day--outside):hover {
  background-color: rgba(119,177,160,0.25);
}

@media (max-width:1020px) {

}

@media (max-width:510px) {

}

<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="c0"
    width="50%"
  >
    <div
      aria-hidden="true"
      className="icon"
    >
      <img
        src="test-file-stub"
      />
    </div>
    <div
      className="input"
    >
      <label
        htmlFor="checkout"
      >
        Checkout
        <span
          aria-hidden="true"
          className="error-msg"
        />
        <span
          aria-live="assertive"
          className="visually-hidden"
        />
      </label>
      <div
        className="DayPickerInput"
      >
        <input
          autoComplete="off"
          data-isdate={true}
          id="checkout"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          placeholder="YYYY-M-D"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms/Input Confirm Password 1`] = `
.c0 {
  width: 100%;
  border-radius: 12px;
  margin: 0.75rem 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  padding: 1.25rem 1.75rem;
  border: 1.15px solid #fff;
  box-shadow: 0px 2px 8px 4px rgba(0,0,0,0.1);
  font-weight: 500;
  font-size: 1.125rem;
  -webkit-transition: box-shadow 0.25s ease;
  transition: box-shadow 0.25s ease;
  overflow: hidden;
}

.c0 .icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 1.75rem;
  width: 2rem;
}

.c0 .input {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c0:focus-within {
  box-shadow: 0px 2px 8px 4px rgba(0,0,0,0.2);
}

.c0 label,
.c0 input,
.c0 ::-webkit-input-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 ::-moz-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 :-ms-input-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 ::placeholder {
  margin: 0.15rem 0;
}

.c0 label {
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  color: #605c54;
}

.c0 label span {
  color: #df0000;
  margin-left: 1rem;
  font-size: 1rem;
}

.c0 input,
.c0 ::-webkit-input-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 ::-moz-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 :-ms-input-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 ::placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input {
  border: 0;
  padding: 0;
  -webkit-transition: all 0.075s linear;
  transition: all 0.075s linear;
  color: #403c34;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  max-width: 100%;
}

.c0 input[type='number'],
.c0 input[type='number']:focus {
  width: 15%;
}

.c0 input:focus {
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
  width: 90%;
}

.c0 ::-webkit-input-placeholder {
  color: #9d9480;
}

.c0 ::-moz-placeholder {
  color: #9d9480;
}

.c0 :-ms-input-placeholder {
  color: #9d9480;
}

.c0 ::placeholder {
  color: #9d9480;
}

.c0 .DayPickerInput-OverlayWrapper {
  z-index: 2;
  position: absolute;
  border-radius: 12px;
}

.c0 .DayPickerInput-Overlay {
  border-radius: 12px;
}

.c0 .DayPicker-Day--today {
  color: #478170;
}

.c0 .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside) {
  position: relative;
  background-color: #478170;
  color: #fff;
}

.c0 .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside):hover {
  background-color: #478170;
}

.c0 .DayPicker:not(.DayPicker--interactionDisabled) .DayPicker-Day:not(.DayPicker-Day--disabled):not(.DayPicker-Day--selected):not(.DayPicker-Day--outside):hover {
  background-color: rgba(119,177,160,0.25);
}

@media (max-width:1020px) {

}

@media (max-width:510px) {

}

<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="c0"
    width="100%"
  >
    <div
      className="input"
    >
      <label
        htmlFor="confirm-password"
      >
        Confirm Password
        <span
          aria-hidden="true"
          className="error-msg"
        />
        <span
          aria-live="assertive"
          className="visually-hidden"
        />
      </label>
      <input
        id="confirm-password"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Must match previous field"
        type="password"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms/Input Default 1`] = `
.c0 {
  width: 100%;
  border-radius: 12px;
  margin: 0.75rem 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  padding: 1.25rem 1.75rem;
  border: 1.15px solid #fff;
  box-shadow: 0px 2px 8px 4px rgba(0,0,0,0.1);
  font-weight: 500;
  font-size: 1.125rem;
  -webkit-transition: box-shadow 0.25s ease;
  transition: box-shadow 0.25s ease;
  overflow: hidden;
}

.c0 .icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 1.75rem;
  width: 2rem;
}

.c0 .input {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c0:focus-within {
  box-shadow: 0px 2px 8px 4px rgba(0,0,0,0.2);
}

.c0 label,
.c0 input,
.c0 ::-webkit-input-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 ::-moz-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 :-ms-input-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 ::placeholder {
  margin: 0.15rem 0;
}

.c0 label {
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  color: #605c54;
}

.c0 label span {
  color: #df0000;
  margin-left: 1rem;
  font-size: 1rem;
}

.c0 input,
.c0 ::-webkit-input-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 ::-moz-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 :-ms-input-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 ::placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input {
  border: 0;
  padding: 0;
  -webkit-transition: all 0.075s linear;
  transition: all 0.075s linear;
  color: #403c34;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  max-width: 100%;
}

.c0 input[type='number'],
.c0 input[type='number']:focus {
  width: 15%;
}

.c0 input:focus {
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
  width: 90%;
}

.c0 ::-webkit-input-placeholder {
  color: #9d9480;
}

.c0 ::-moz-placeholder {
  color: #9d9480;
}

.c0 :-ms-input-placeholder {
  color: #9d9480;
}

.c0 ::placeholder {
  color: #9d9480;
}

.c0 .DayPickerInput-OverlayWrapper {
  z-index: 2;
  position: absolute;
  border-radius: 12px;
}

.c0 .DayPickerInput-Overlay {
  border-radius: 12px;
}

.c0 .DayPicker-Day--today {
  color: #478170;
}

.c0 .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside) {
  position: relative;
  background-color: #478170;
  color: #fff;
}

.c0 .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside):hover {
  background-color: #478170;
}

.c0 .DayPicker:not(.DayPicker--interactionDisabled) .DayPicker-Day:not(.DayPicker-Day--disabled):not(.DayPicker-Day--selected):not(.DayPicker-Day--outside):hover {
  background-color: rgba(119,177,160,0.25);
}

@media (max-width:1020px) {

}

@media (max-width:510px) {

}

<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="c0"
    width="100%"
  >
    <div
      className="input"
    >
      <label
        htmlFor="test"
      >
        Input
        <span
          aria-hidden="true"
          className="error-msg"
        />
        <span
          aria-live="assertive"
          className="visually-hidden"
        />
      </label>
      <input
        id="test"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Placeholder"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms/Input Email 1`] = `
.c0 {
  width: 100%;
  border-radius: 12px;
  margin: 0.75rem 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  padding: 1.25rem 1.75rem;
  border: 1.15px solid #fff;
  box-shadow: 0px 2px 8px 4px rgba(0,0,0,0.1);
  font-weight: 500;
  font-size: 1.125rem;
  -webkit-transition: box-shadow 0.25s ease;
  transition: box-shadow 0.25s ease;
  overflow: hidden;
}

.c0 .icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 1.75rem;
  width: 2rem;
}

.c0 .input {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c0:focus-within {
  box-shadow: 0px 2px 8px 4px rgba(0,0,0,0.2);
}

.c0 label,
.c0 input,
.c0 ::-webkit-input-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 ::-moz-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 :-ms-input-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 ::placeholder {
  margin: 0.15rem 0;
}

.c0 label {
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  color: #605c54;
}

.c0 label span {
  color: #df0000;
  margin-left: 1rem;
  font-size: 1rem;
}

.c0 input,
.c0 ::-webkit-input-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 ::-moz-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 :-ms-input-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 ::placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input {
  border: 0;
  padding: 0;
  -webkit-transition: all 0.075s linear;
  transition: all 0.075s linear;
  color: #403c34;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  max-width: 100%;
}

.c0 input[type='number'],
.c0 input[type='number']:focus {
  width: 15%;
}

.c0 input:focus {
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
  width: 90%;
}

.c0 ::-webkit-input-placeholder {
  color: #9d9480;
}

.c0 ::-moz-placeholder {
  color: #9d9480;
}

.c0 :-ms-input-placeholder {
  color: #9d9480;
}

.c0 ::placeholder {
  color: #9d9480;
}

.c0 .DayPickerInput-OverlayWrapper {
  z-index: 2;
  position: absolute;
  border-radius: 12px;
}

.c0 .DayPickerInput-Overlay {
  border-radius: 12px;
}

.c0 .DayPicker-Day--today {
  color: #478170;
}

.c0 .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside) {
  position: relative;
  background-color: #478170;
  color: #fff;
}

.c0 .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside):hover {
  background-color: #478170;
}

.c0 .DayPicker:not(.DayPicker--interactionDisabled) .DayPicker-Day:not(.DayPicker-Day--disabled):not(.DayPicker-Day--selected):not(.DayPicker-Day--outside):hover {
  background-color: rgba(119,177,160,0.25);
}

@media (max-width:1020px) {

}

@media (max-width:510px) {

}

<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="c0"
    width="100%"
  >
    <div
      className="input"
    >
      <label
        htmlFor="email"
      >
        Email
        <span
          aria-hidden="true"
          className="error-msg"
        />
        <span
          aria-live="assertive"
          className="visually-hidden"
        />
      </label>
      <input
        id="email"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="rick@gmail.com"
        type="email"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms/Input Guests 1`] = `
.c0 {
  width: 100%;
  border-radius: 12px;
  margin: 0.75rem 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  padding: 1.25rem 1.75rem;
  border: 1.15px solid #fff;
  box-shadow: 0px 2px 8px 4px rgba(0,0,0,0.1);
  font-weight: 500;
  font-size: 1.125rem;
  -webkit-transition: box-shadow 0.25s ease;
  transition: box-shadow 0.25s ease;
  overflow: hidden;
}

.c0 .icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 1.75rem;
  width: 2rem;
}

.c0 .input {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c0:focus-within {
  box-shadow: 0px 2px 8px 4px rgba(0,0,0,0.2);
}

.c0 label,
.c0 input,
.c0 ::-webkit-input-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 ::-moz-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 :-ms-input-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 ::placeholder {
  margin: 0.15rem 0;
}

.c0 label {
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  color: #605c54;
}

.c0 label span {
  color: #df0000;
  margin-left: 1rem;
  font-size: 1rem;
}

.c0 input,
.c0 ::-webkit-input-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 ::-moz-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 :-ms-input-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 ::placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input {
  border: 0;
  padding: 0;
  -webkit-transition: all 0.075s linear;
  transition: all 0.075s linear;
  color: #403c34;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  max-width: 100%;
}

.c0 input[type='number'],
.c0 input[type='number']:focus {
  width: 15%;
}

.c0 input:focus {
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
  width: 90%;
}

.c0 ::-webkit-input-placeholder {
  color: #9d9480;
}

.c0 ::-moz-placeholder {
  color: #9d9480;
}

.c0 :-ms-input-placeholder {
  color: #9d9480;
}

.c0 ::placeholder {
  color: #9d9480;
}

.c0 .DayPickerInput-OverlayWrapper {
  z-index: 2;
  position: absolute;
  border-radius: 12px;
}

.c0 .DayPickerInput-Overlay {
  border-radius: 12px;
}

.c0 .DayPicker-Day--today {
  color: #478170;
}

.c0 .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside) {
  position: relative;
  background-color: #478170;
  color: #fff;
}

.c0 .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside):hover {
  background-color: #478170;
}

.c0 .DayPicker:not(.DayPicker--interactionDisabled) .DayPicker-Day:not(.DayPicker-Day--disabled):not(.DayPicker-Day--selected):not(.DayPicker-Day--outside):hover {
  background-color: rgba(119,177,160,0.25);
}

@media (max-width:1020px) {

}

@media (max-width:510px) {

}

<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="c0"
    width="100%"
  >
    <div
      aria-hidden="true"
      className="icon"
    >
      <img
        src="test-file-stub"
      />
    </div>
    <div
      className="input"
    >
      <label
        htmlFor="guests"
      >
        Guests
        <span
          aria-hidden="true"
          className="error-msg"
        />
        <span
          aria-live="assertive"
          className="visually-hidden"
        />
      </label>
      <input
        id="guests"
        min={1}
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="1"
        type="number"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms/Input Location 1`] = `
.c0 {
  width: 100%;
  border-radius: 12px;
  margin: 0.75rem 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  padding: 1.25rem 1.75rem;
  border: 1.15px solid #fff;
  box-shadow: 0px 2px 8px 4px rgba(0,0,0,0.1);
  font-weight: 500;
  font-size: 1.125rem;
  -webkit-transition: box-shadow 0.25s ease;
  transition: box-shadow 0.25s ease;
  overflow: hidden;
}

.c0 .icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 1.75rem;
  width: 2rem;
}

.c0 .input {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c0:focus-within {
  box-shadow: 0px 2px 8px 4px rgba(0,0,0,0.2);
}

.c0 label,
.c0 input,
.c0 ::-webkit-input-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 ::-moz-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 :-ms-input-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 ::placeholder {
  margin: 0.15rem 0;
}

.c0 label {
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  color: #605c54;
}

.c0 label span {
  color: #df0000;
  margin-left: 1rem;
  font-size: 1rem;
}

.c0 input,
.c0 ::-webkit-input-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 ::-moz-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 :-ms-input-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 ::placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input {
  border: 0;
  padding: 0;
  -webkit-transition: all 0.075s linear;
  transition: all 0.075s linear;
  color: #403c34;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  max-width: 100%;
}

.c0 input[type='number'],
.c0 input[type='number']:focus {
  width: 15%;
}

.c0 input:focus {
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
  width: 90%;
}

.c0 ::-webkit-input-placeholder {
  color: #9d9480;
}

.c0 ::-moz-placeholder {
  color: #9d9480;
}

.c0 :-ms-input-placeholder {
  color: #9d9480;
}

.c0 ::placeholder {
  color: #9d9480;
}

.c0 .DayPickerInput-OverlayWrapper {
  z-index: 2;
  position: absolute;
  border-radius: 12px;
}

.c0 .DayPickerInput-Overlay {
  border-radius: 12px;
}

.c0 .DayPicker-Day--today {
  color: #478170;
}

.c0 .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside) {
  position: relative;
  background-color: #478170;
  color: #fff;
}

.c0 .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside):hover {
  background-color: #478170;
}

.c0 .DayPicker:not(.DayPicker--interactionDisabled) .DayPicker-Day:not(.DayPicker-Day--disabled):not(.DayPicker-Day--selected):not(.DayPicker-Day--outside):hover {
  background-color: rgba(119,177,160,0.25);
}

@media (max-width:1020px) {

}

@media (max-width:510px) {

}

<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="c0"
    width="100%"
  >
    <div
      aria-hidden="true"
      className="icon"
    >
      <img
        src="test-file-stub"
      />
    </div>
    <div
      className="input"
    >
      <label
        htmlFor="query"
      >
        Location
        <span
          aria-hidden="true"
          className="error-msg"
        />
        <span
          aria-live="assertive"
          className="visually-hidden"
        />
      </label>
      <input
        id="query"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Los Angeles, California"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms/Input Name 1`] = `
.c0 {
  width: 100%;
  border-radius: 12px;
  margin: 0.75rem 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  padding: 1.25rem 1.75rem;
  border: 1.15px solid #fff;
  box-shadow: 0px 2px 8px 4px rgba(0,0,0,0.1);
  font-weight: 500;
  font-size: 1.125rem;
  -webkit-transition: box-shadow 0.25s ease;
  transition: box-shadow 0.25s ease;
  overflow: hidden;
}

.c0 .icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 1.75rem;
  width: 2rem;
}

.c0 .input {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c0:focus-within {
  box-shadow: 0px 2px 8px 4px rgba(0,0,0,0.2);
}

.c0 label,
.c0 input,
.c0 ::-webkit-input-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 ::-moz-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 :-ms-input-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 ::placeholder {
  margin: 0.15rem 0;
}

.c0 label {
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  color: #605c54;
}

.c0 label span {
  color: #df0000;
  margin-left: 1rem;
  font-size: 1rem;
}

.c0 input,
.c0 ::-webkit-input-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 ::-moz-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 :-ms-input-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 ::placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input {
  border: 0;
  padding: 0;
  -webkit-transition: all 0.075s linear;
  transition: all 0.075s linear;
  color: #403c34;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  max-width: 100%;
}

.c0 input[type='number'],
.c0 input[type='number']:focus {
  width: 15%;
}

.c0 input:focus {
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
  width: 90%;
}

.c0 ::-webkit-input-placeholder {
  color: #9d9480;
}

.c0 ::-moz-placeholder {
  color: #9d9480;
}

.c0 :-ms-input-placeholder {
  color: #9d9480;
}

.c0 ::placeholder {
  color: #9d9480;
}

.c0 .DayPickerInput-OverlayWrapper {
  z-index: 2;
  position: absolute;
  border-radius: 12px;
}

.c0 .DayPickerInput-Overlay {
  border-radius: 12px;
}

.c0 .DayPicker-Day--today {
  color: #478170;
}

.c0 .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside) {
  position: relative;
  background-color: #478170;
  color: #fff;
}

.c0 .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside):hover {
  background-color: #478170;
}

.c0 .DayPicker:not(.DayPicker--interactionDisabled) .DayPicker-Day:not(.DayPicker-Day--disabled):not(.DayPicker-Day--selected):not(.DayPicker-Day--outside):hover {
  background-color: rgba(119,177,160,0.25);
}

@media (max-width:1020px) {

}

@media (max-width:510px) {

}

<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="c0"
    width="100%"
  >
    <div
      className="input"
    >
      <label
        htmlFor="name"
      >
        Name
        <span
          aria-hidden="true"
          className="error-msg"
        />
        <span
          aria-live="assertive"
          className="visually-hidden"
        />
      </label>
      <input
        autoComplete="off"
        id="name"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Rick"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms/Input Password 1`] = `
.c0 {
  width: 100%;
  border-radius: 12px;
  margin: 0.75rem 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  padding: 1.25rem 1.75rem;
  border: 1.15px solid #fff;
  box-shadow: 0px 2px 8px 4px rgba(0,0,0,0.1);
  font-weight: 500;
  font-size: 1.125rem;
  -webkit-transition: box-shadow 0.25s ease;
  transition: box-shadow 0.25s ease;
  overflow: hidden;
}

.c0 .icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 1.75rem;
  width: 2rem;
}

.c0 .input {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c0:focus-within {
  box-shadow: 0px 2px 8px 4px rgba(0,0,0,0.2);
}

.c0 label,
.c0 input,
.c0 ::-webkit-input-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 ::-moz-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 :-ms-input-placeholder {
  margin: 0.15rem 0;
}

.c0 label,
.c0 input,
.c0 ::placeholder {
  margin: 0.15rem 0;
}

.c0 label {
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  color: #605c54;
}

.c0 label span {
  color: #df0000;
  margin-left: 1rem;
  font-size: 1rem;
}

.c0 input,
.c0 ::-webkit-input-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 ::-moz-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 :-ms-input-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input,
.c0 ::placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c0 input {
  border: 0;
  padding: 0;
  -webkit-transition: all 0.075s linear;
  transition: all 0.075s linear;
  color: #403c34;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  max-width: 100%;
}

.c0 input[type='number'],
.c0 input[type='number']:focus {
  width: 15%;
}

.c0 input:focus {
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
  width: 90%;
}

.c0 ::-webkit-input-placeholder {
  color: #9d9480;
}

.c0 ::-moz-placeholder {
  color: #9d9480;
}

.c0 :-ms-input-placeholder {
  color: #9d9480;
}

.c0 ::placeholder {
  color: #9d9480;
}

.c0 .DayPickerInput-OverlayWrapper {
  z-index: 2;
  position: absolute;
  border-radius: 12px;
}

.c0 .DayPickerInput-Overlay {
  border-radius: 12px;
}

.c0 .DayPicker-Day--today {
  color: #478170;
}

.c0 .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside) {
  position: relative;
  background-color: #478170;
  color: #fff;
}

.c0 .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside):hover {
  background-color: #478170;
}

.c0 .DayPicker:not(.DayPicker--interactionDisabled) .DayPicker-Day:not(.DayPicker-Day--disabled):not(.DayPicker-Day--selected):not(.DayPicker-Day--outside):hover {
  background-color: rgba(119,177,160,0.25);
}

@media (max-width:1020px) {

}

@media (max-width:510px) {

}

<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="c0"
    width="100%"
  >
    <div
      className="input"
    >
      <label
        htmlFor="password"
      >
        Password
        <span
          aria-hidden="true"
          className="error-msg"
        />
        <span
          aria-live="assertive"
          className="visually-hidden"
        />
      </label>
      <input
        id="password"
        minLength={8}
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Must contain at least 8 characters"
        type="password"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms/SearchForm Default 1`] = `
.c4 {
  border: 0;
  min-width: 20.375rem;
  font-size: 1.25rem;
  font-weight: 600;
  color: #fff;
  background: linear-gradient(90deg,rgba(150,219,199,0.5) 0%,#547c71 100%),#77b1a0;
  -webkit-letter-spacing: 0.04em;
  -moz-letter-spacing: 0.04em;
  -ms-letter-spacing: 0.04em;
  letter-spacing: 0.04em;
  padding: 1rem 0;
  border-radius: 12px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.25);
  cursor: pointer;
  z-index: 1;
  position: relative;
  -webkit-transition: all 0.25s ease;
  transition: all 0.25s ease;
}

.c4:disabled {
  cursor: not-allowed;
  border: none;
  color: #fff;
}

.c4:disabled::before {
  position: absolute;
  content: '';
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: lightgray;
  border-radius: inherit;
  z-index: -1;
  -webkit-transition: opacity 0.5s ease;
  transition: opacity 0.5s ease;
  opacity: 0.75;
}

.c4:enabled:hover {
  box-shadow: 0px 4px 4px rgba(0,0,0,0.25);
}

.c4:enabled::before {
  position: absolute;
  content: '';
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: linear-gradient(270deg,#6a978a -10%,rgba(126,183,166,0.5) 155%),#77b1a0;
  border-radius: inherit;
  z-index: -1;
  -webkit-transition: opacity 0.5s ease;
  transition: opacity 0.5s ease;
  opacity: 0;
}

.c4:enabled:hover::before {
  opacity: 1;
}

.c3 {
  width: 100%;
  border-radius: 12px;
  margin: 0.75rem 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  padding: 1.25rem 1.75rem;
  border: 1.15px solid #fff;
  box-shadow: 0px 2px 8px 4px rgba(0,0,0,0.1);
  font-weight: 500;
  font-size: 1.125rem;
  -webkit-transition: box-shadow 0.25s ease;
  transition: box-shadow 0.25s ease;
  overflow: hidden;
}

.c3 .icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 1.75rem;
  width: 2rem;
}

.c3 .input {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c3:focus-within {
  box-shadow: 0px 2px 8px 4px rgba(0,0,0,0.2);
}

.c3 label,
.c3 input,
.c3 ::-webkit-input-placeholder {
  margin: 0.15rem 0;
}

.c3 label,
.c3 input,
.c3 ::-moz-placeholder {
  margin: 0.15rem 0;
}

.c3 label,
.c3 input,
.c3 :-ms-input-placeholder {
  margin: 0.15rem 0;
}

.c3 label,
.c3 input,
.c3 ::placeholder {
  margin: 0.15rem 0;
}

.c3 label {
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  color: #605c54;
}

.c3 label span {
  color: #df0000;
  margin-left: 1rem;
  font-size: 1rem;
}

.c3 input,
.c3 ::-webkit-input-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c3 input,
.c3 ::-moz-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c3 input,
.c3 :-ms-input-placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c3 input,
.c3 ::placeholder {
  -webkit-letter-spacing: 0.04rem;
  -moz-letter-spacing: 0.04rem;
  -ms-letter-spacing: 0.04rem;
  letter-spacing: 0.04rem;
  font-size: 1.25rem;
  font-weight: 500;
  background-color: inherit;
}

.c3 input {
  border: 0;
  padding: 0;
  -webkit-transition: all 0.075s linear;
  transition: all 0.075s linear;
  color: #403c34;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  max-width: 100%;
}

.c3 input[type='number'],
.c3 input[type='number']:focus {
  width: 15%;
}

.c3 input:focus {
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
  width: 90%;
}

.c3 ::-webkit-input-placeholder {
  color: #9d9480;
}

.c3 ::-moz-placeholder {
  color: #9d9480;
}

.c3 :-ms-input-placeholder {
  color: #9d9480;
}

.c3 ::placeholder {
  color: #9d9480;
}

.c3 .DayPickerInput-OverlayWrapper {
  z-index: 2;
  position: absolute;
  border-radius: 12px;
}

.c3 .DayPickerInput-Overlay {
  border-radius: 12px;
}

.c3 .DayPicker-Day--today {
  color: #478170;
}

.c3 .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside) {
  position: relative;
  background-color: #478170;
  color: #fff;
}

.c3 .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside):hover {
  background-color: #478170;
}

.c3 .DayPicker:not(.DayPicker--interactionDisabled) .DayPicker-Day:not(.DayPicker-Day--disabled):not(.DayPicker-Day--selected):not(.DayPicker-Day--outside):hover {
  background-color: rgba(119,177,160,0.25);
}

.c1 {
  height: 6.375rem;
  width: 6.375rem;
}

.c0 {
  width: 59.375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2rem 6rem;
  border: 0.5px solid #fff;
  border-radius: 36px;
  box-shadow: 0px 2px 8px 4px rgba(0,0,0,0.05);
  position: relative;
}

.c0 h1 {
  font-size: 3rem;
  font-weight: 600;
}

.c0 h2 {
  font-size: 1.5rem;
  font-weight: 400;
  text-align: center;
  margin-top: 0.1rem;
}

.c0 .form-error {
  width: 100%;
  text-align: center;
  padding: 1rem 0 1.5rem;
  color: #df0000;
  font-weight: 500;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

@media (max-width:1024px) {
  .c1 {
    display: none;
  }
}

@media (max-width:1020px) {

}

@media (max-width:510px) {

}

<div
  className="c0"
  width="59.375rem"
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "center",
        "marginTop": "1rem",
        "width": "100%",
      }
    }
  >
    <img
      className="c1"
      size="6.375rem"
      src="test-file-stub"
    />
  </div>
  <h1>
    Stay at an Illegal Hotel.
  </h1>
  <h2>
    Search through listings in the world's top cities on Bearbnb.
  </h2>
  <form
    className="c2"
    onSubmit={[Function]}
  >
    <div
      className="c3"
      width="100%"
    >
      <div
        aria-hidden="true"
        className="icon"
      >
        <img
          src="test-file-stub"
        />
      </div>
      <div
        className="input"
      >
        <label
          htmlFor="location"
        >
          Location
          <span
            aria-hidden="true"
            className="error-msg"
          />
          <span
            aria-live="assertive"
            className="visually-hidden"
          />
        </label>
        <input
          autoComplete="off"
          id="location"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Los Angeles, California"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="c3"
      width="100%"
    >
      <div
        aria-hidden="true"
        className="icon"
      >
        <img
          src="test-file-stub"
        />
      </div>
      <div
        className="input"
      >
        <label
          htmlFor="checkin"
        >
          Checkin
          <span
            aria-hidden="true"
            className="error-msg"
          />
          <span
            aria-live="assertive"
            className="visually-hidden"
          />
        </label>
        <div
          className="DayPickerInput"
        >
          <input
            autoComplete="off"
            data-isdate={true}
            id="checkin"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            placeholder="YYYY-M-D"
            value="2020-10-30"
          />
        </div>
      </div>
    </div>
    <div
      className="c3"
      width="100%"
    >
      <div
        aria-hidden="true"
        className="icon"
      >
        <img
          src="test-file-stub"
        />
      </div>
      <div
        className="input"
      >
        <label
          htmlFor="checkout"
        >
          Checkout
          <span
            aria-hidden="true"
            className="error-msg"
          />
          <span
            aria-live="assertive"
            className="visually-hidden"
          />
        </label>
        <div
          className="DayPickerInput"
        >
          <input
            autoComplete="off"
            data-isdate={true}
            id="checkout"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            placeholder="YYYY-M-D"
            value="2020-10-31"
          />
        </div>
      </div>
    </div>
    <div
      className="c3"
      width="100%"
    >
      <div
        aria-hidden="true"
        className="icon"
      >
        <img
          src="test-file-stub"
        />
      </div>
      <div
        className="input"
      >
        <label
          htmlFor="guests"
        >
          Guests
          <span
            aria-hidden="true"
            className="error-msg"
          />
          <span
            aria-live="assertive"
            className="visually-hidden"
          />
        </label>
        <input
          id="guests"
          min={1}
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="1"
          type="number"
          value={1}
        />
      </div>
    </div>
    <span
      aria-live="assertive"
      className="form-error"
    />
    <button
      aria-disabled={true}
      className="c4"
      disabled={true}
      onClick={[Function]}
      size="large"
      type="submit"
    >
      Search
    </button>
  </form>
</div>
`;

exports[`Storyshots Header Default 1`] = `
.c2 {
  height: 2.625rem;
  width: 2.625rem;
  position: absolute;
  left: 50%;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  position: relative;
  padding: 0.5rem;
  border-radius: 24px;
  background-color: #fff;
  -webkit-transition: background-color 0.25s ease;
  transition: background-color 0.25s ease;
  border: 2px solid transparent;
}

.c4:hover {
  background-color: #f4f4f4;
  cursor: pointer;
}

.c4 div {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.c5 {
  width: 2rem;
  height: 2rem;
  border-radius: 55px;
  background: url(https://i.imgur.com/ccPgAlP.png);
  background-size: cover;
  display: inline-block;
}

.c6 {
  font-size: 1rem;
  display: inline-block;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  -webkit-transition: all 1s ease;
  transition: all 1s ease;
  list-style-type: none;
  margin-top: 0.25rem;
  padding: 0;
  border-radius: 12px;
  font-weight: 500;
  text-align: right;
  width: 95%;
  border: 1px solid #f4f4f4;
  overflow: hidden;
  font-size: 0.875rem;
  position: absolute;
  top: 100%;
  background-color: #fff;
}

.c8:focus-within {
  display: inline-block;
}

.c8 li {
  padding: 0.75rem 1.25rem 0.75rem 0.75rem;
  border-bottom: 1px solid #f4f4f4;
  -webkit-transition: background-color 0.5s ease;
  transition: background-color 0.5s ease;
}

.c8 li:hover {
  background-color: #f4f4f4;
}

.c8 li:last-child {
  border-bottom: 0;
}

.c9 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #497d6e;
}

.c0 {
  max-width: 1920px;
  padding: 1rem 0.75rem 1rem 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background-color: #fff;
}

.c1 {
  font-family: "Fredoka One",cursive;
  font-size: 2rem;
}

.c1 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #403c34;
}

@media (max-width:1024px) {
  .c2 {
    display: none;
  }
}

@media (max-width:1024px) {
  .c6 {
    display: none;
  }
}

@media (max-width:1020px) {

}

@media (max-width:510px) {

}

<header
  className="c0"
>
  <div
    className="c1"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      bearbnb
    </a>
  </div>
  <img
    className="c2"
    size="2.625rem"
    src="test-file-stub"
  />
  <nav
    className="c3"
  >
    <button
      aria-controls="user-menu"
      aria-expanded={false}
      aria-haspopup="true"
      aria-label="Show User Menu"
      className="c4"
      onClick={[Function]}
    >
      <div
        className="c5"
      />
      <div
        aria-hidden="true"
        className="c6"
      >
        Guest Hibermate
      </div>
      <div
        aria-hidden="true"
        className="c7"
      >
        <img
          alt="Show user menu"
          src="test-file-stub"
        />
      </div>
    </button>
    <ul
      className="c8"
      hidden={true}
      id="user-menu"
      onBlur={[Function]}
      onKeyDown={[Function]}
    >
      <li>
        <a
          className="c9"
          href="/login"
          onClick={[Function]}
        >
          Log in
        </a>
      </li>
      <li>
        <a
          className="c9"
          href="/register"
          onClick={[Function]}
        >
          Sign up
        </a>
      </li>
    </ul>
  </nav>
</header>
`;

exports[`Storyshots User Logged In 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  position: relative;
  padding: 0.5rem;
  border-radius: 24px;
  background-color: #fff;
  -webkit-transition: background-color 0.25s ease;
  transition: background-color 0.25s ease;
  border: 2px solid transparent;
}

.c1:hover {
  background-color: #f4f4f4;
  cursor: pointer;
}

.c1 div {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.c2 {
  width: 2rem;
  height: 2rem;
  border-radius: 55px;
  background: url(https://randomuser.me/api/portraits/women/26.jpg);
  background-size: cover;
  display: inline-block;
}

.c3 {
  font-size: 1rem;
  display: inline-block;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  -webkit-transition: all 1s ease;
  transition: all 1s ease;
  list-style-type: none;
  margin-top: 0.25rem;
  padding: 0;
  border-radius: 12px;
  font-weight: 500;
  text-align: right;
  width: 95%;
  border: 1px solid #f4f4f4;
  overflow: hidden;
  font-size: 0.875rem;
  position: absolute;
  top: 100%;
  background-color: #fff;
}

.c5:focus-within {
  display: inline-block;
}

.c5 li {
  padding: 0.75rem 1.25rem 0.75rem 0.75rem;
  border-bottom: 1px solid #f4f4f4;
  -webkit-transition: background-color 0.5s ease;
  transition: background-color 0.5s ease;
}

.c5 li:hover {
  background-color: #f4f4f4;
}

.c5 li:last-child {
  border-bottom: 0;
}

.c6 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #497d6e;
}

@media (max-width:1024px) {
  .c3 {
    display: none;
  }
}

@media (max-width:1020px) {

}

@media (max-width:510px) {

}

<nav
  className="c0"
>
  <button
    aria-controls="user-menu"
    aria-expanded={false}
    aria-haspopup="true"
    aria-label="Show User Menu"
    className="c1"
    onClick={[Function]}
  >
    <div
      className="c2"
    />
    <div
      aria-hidden="true"
      className="c3"
    >
      Natalie
    </div>
    <div
      aria-hidden="true"
      className="c4"
    >
      <img
        alt="Show user menu"
        src="test-file-stub"
      />
    </div>
  </button>
  <ul
    className="c5"
    hidden={true}
    id="user-menu"
    onBlur={[Function]}
    onKeyDown={[Function]}
  >
    <li>
      <a
        className="c6"
        href="/logout"
        onClick={[Function]}
      >
        Log out
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Storyshots User Not Logged In 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  position: relative;
  padding: 0.5rem;
  border-radius: 24px;
  background-color: #fff;
  -webkit-transition: background-color 0.25s ease;
  transition: background-color 0.25s ease;
  border: 2px solid transparent;
}

.c1:hover {
  background-color: #f4f4f4;
  cursor: pointer;
}

.c1 div {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.c2 {
  width: 2rem;
  height: 2rem;
  border-radius: 55px;
  background: url(https://i.imgur.com/ccPgAlP.png);
  background-size: cover;
  display: inline-block;
}

.c3 {
  font-size: 1rem;
  display: inline-block;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  -webkit-transition: all 1s ease;
  transition: all 1s ease;
  list-style-type: none;
  margin-top: 0.25rem;
  padding: 0;
  border-radius: 12px;
  font-weight: 500;
  text-align: right;
  width: 95%;
  border: 1px solid #f4f4f4;
  overflow: hidden;
  font-size: 0.875rem;
  position: absolute;
  top: 100%;
  background-color: #fff;
}

.c5:focus-within {
  display: inline-block;
}

.c5 li {
  padding: 0.75rem 1.25rem 0.75rem 0.75rem;
  border-bottom: 1px solid #f4f4f4;
  -webkit-transition: background-color 0.5s ease;
  transition: background-color 0.5s ease;
}

.c5 li:hover {
  background-color: #f4f4f4;
}

.c5 li:last-child {
  border-bottom: 0;
}

.c6 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #497d6e;
}

@media (max-width:1024px) {
  .c3 {
    display: none;
  }
}

@media (max-width:1020px) {

}

@media (max-width:510px) {

}

<nav
  className="c0"
>
  <button
    aria-controls="user-menu"
    aria-expanded={false}
    aria-haspopup="true"
    aria-label="Show User Menu"
    className="c1"
    onClick={[Function]}
  >
    <div
      className="c2"
    />
    <div
      aria-hidden="true"
      className="c3"
    >
      Guest Hibermate
    </div>
    <div
      aria-hidden="true"
      className="c4"
    >
      <img
        alt="Show user menu"
        src="test-file-stub"
      />
    </div>
  </button>
  <ul
    className="c5"
    hidden={true}
    id="user-menu"
    onBlur={[Function]}
    onKeyDown={[Function]}
  >
    <li>
      <a
        className="c6"
        href="/login"
        onClick={[Function]}
      >
        Log in
      </a>
    </li>
    <li>
      <a
        className="c6"
        href="/register"
        onClick={[Function]}
      >
        Sign up
      </a>
    </li>
  </ul>
</nav>
`;
